--- a/lançamento.html
+++ b/lançamento.html
@@ -41,7 +41,7 @@
                   </div>
                   
                   <button type="submit" class="btn aula btn-sucess">entrar</button>
-                  <a href="index.html" type="submit" class="btn btn-primary">cadastrar</a>
+                  <a href="index.html" type="button" class="btn btn-primary">cadastrar</a>
                   
   
 
