--- a/lançamento.html
+++ b/lançamento.html
@@ -41,7 +41,8 @@
                   </div>
                   
                   <button type="submit" class="btn aula btn-sucess">entrar</button>
-                  <a href="index.html" type="button" class="btn btn-primary">cadastrar</a>
+
+                  <a href="tela_inicial.html" type="button" class="btn btn-primary" id="voltar">voltar para o inicio</a>
                   
   
 
