--- a/lançamento.html
+++ b/lançamento.html
@@ -42,7 +42,7 @@
                   
                   <button type="submit" class="btn aula btn-sucess">entrar</button>
 
-                  <a href="tela_inicial.html" type="button" class="btn btn-sucess" id="voltar">voltar </a>
+                  <a href="tela_inicial.php" type="button" class="btn btn-sucess" id="voltar">voltar </a>
                   
   
 
