--- a/listar_usuario.html
+++ b/listar_usuario.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listar Usuários</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    
 
     <header class="header">
-        <nav>sair</nav>
+        <nav><h3>lista de usuario</h4></nav>
         <nav>user</nav>
+        <nav>sair</nav>
     </header>
-
+<form id="formulario">
     <table border>
         <thead>
             <tr>
@@ -24,10 +27,10 @@
         
         <tbody>
             <tr>
-                <td>sem registros</td>
-                <td>sem registros</td>
-                <td>sem registros</td>
-                <td>sem registros</td>
+                <td>não registrado</td>
+                <td>não registrado</td>
+                <td>não registrado</td>
+                <td>não registrado</td>
 
                 <td>
                     <button type="#">EDITAR</button>
@@ -40,7 +43,7 @@
 
     </table>
 
-
+</form>
 
 </body>
 </html>
